--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
 }
 
 .title_header_form {
@@ -44,7 +43,7 @@ body {
 }
 
 .right {
-  margin-left: 75px;
+  margin-left: 65px;
 }
 
 .right .buttons {
@@ -132,7 +131,7 @@ body {
   margin-right: 15px;
 }
 
-.right .inputName {
+.right .input_name {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -181,12 +180,7 @@ body {
 }
 
 .right .email {
-  max-width: 100%;
   margin-right: 55px;
-}
-
-.right .phone {
-  max-width: 100%;
 }
 
 .right .body_form {
@@ -204,6 +198,7 @@ body {
 }
 
 .right .body_form .radio_button {
+  border: 0 none;
   margin-top: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -248,5 +243,47 @@ body {
 .right .body_form .create_account:hover {
   cursor: pointer;
   background-color: #035e8f;
+}
+
+@media (max-width: 1366px) {
+  .container {
+    max-width: 960px;
+  }
+  .right {
+    margin-right: 35px;
+  }
+  .input_name {
+    max-width: 960px;
+  }
+  .input_name .phone {
+    width: 100%;
+  }
+  .input_name .email {
+    width: 100%;
+  }
+  .input_name .text-field__input {
+    padding: .1rem .5rem;
+  }
+  .create_account {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 740px;
+  }
+  .right {
+    margin-right: 55px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 560px;
+  }
+  .left {
+    display: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
