--- a/style.scss
+++ b/style.scss
@@ -14,7 +14,6 @@ body {
 .form {
     background-color: #ffffff;
     display: flex;
-    width: 100%;
 }
 .title_header_form {
     color: $title;
@@ -42,7 +41,7 @@ body {
     }
 }
 .right {
-    margin-left: 75px;
+    margin-left: 65px;
     .buttons {
         margin-top: 60px;
         padding-bottom: 60px;
@@ -110,7 +109,7 @@ body {
         height: 15px;
         margin-right: 15px;
     }
-    .inputName {
+    .input_name {
        display: flex;
     }
     .text-field__input {
@@ -152,12 +151,7 @@ body {
       }
 
       .email {
-        max-width: 100%;
         margin-right: 55px;
-        
-      }
-      .phone {
-        max-width: 100%;
       }
       .body_form {
           margin-top: 55px;
@@ -169,7 +163,9 @@ body {
               font-size: 18px;
               color: $text;
           }
+          
           .radio_button {
+              border: 0 none;
               margin-top: 40px;
               display: flex;
                 div {
@@ -207,5 +203,42 @@ body {
         }
       }
     }
-  
-      
+@media (max-width: 1366px) {
+    .container {
+        max-width: 960px;
+    }
+    .right {
+        margin-right: 35px;
+    }
+    .input_name {
+        max-width: 960px;
+        .phone {
+            width: 100%;
+        }
+        .email {
+            width: 100%;
+        }
+        .text-field__input {
+            padding: .1rem .5rem;
+        }
+    }
+    .create_account {
+        margin-bottom: 30px;
+    }
+}
+@media (max-width: 992px) {
+    .container {
+        max-width: 740px;
+    }
+    .right {
+        margin-right: 55px;
+    }
+}
+@media (max-width: 768px) {
+    .container {
+        max-width: 560px;
+    }
+    .left {
+        display: none;
+    }
+}
